styles.css
/* ... */
#events_name #events_artist_text #artist1_details {
	margin-left: 607px;
	margin-top: -86px;
}
#artist_name2 #artists_events_text2 #event1_details2 {
	margin-left: 607px;
	margin-top: -86px;
}
#notice_title #notice_text1 #notice_details1 {
	margin-left: -498px;
	margin-top: 84px;
	text-align: left;
}
#events_name2 #events_artist_text2 #artist1_details2 {
	margin-left: 166px;
	margin-top: -86px;
}
#contact #links1 .nav-link {
	color: #FFFFFF;
	padding-top: 0px;
}
#content #top #mainnav {
	margin-top: -161px;
	margin-left: -105px;
	color: #FFFFFF;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#content #top #second_nav {
	margin-top: 95px;
	font-size: 25px;
	color: #FFFFFF;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#content #top #header_transparent_background {
	opacity: 0.8;
	margin-top: -22px;
	margin-bottom: -256px;
}
#artist_name #artists_events_text #more_info1 {
	margin-top: 101px;
	margin-left: 240px;
	font-size: 25px;
}
#events_name #events_artist_text #more_info2 {
	margin-top: 101px;
	margin-left: 325px;
	font-size: 25px;
}
#artist_name2 #artists_events_text2 #more_info2 {
	margin-top: 101px;
	margin-left: 325px;
	font-size: 25px;
}
#events_name2 #events_artist_text2 #more_info4 {
	margin-top: 101px;
	margin-left: 158px;
	font-size: 25px;
}
#body1 #welcome #welcome_title {
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size: 30px;
}
.image5 {
	position: absolute;
	top: 333px;
	width: 82.5%;
	height: 1627px;
	opacity: 0.92;
	left: 108px;
}

body img {
	top: 15px;
}
.image2 {
	position: absolute;
	top: 149px;
	left: 0px;
	opacity: 0.73;
	height: 2150px;
	background-color: #FCFCFC;
	width: 99.5%;
	margin-top: -2px;
}
.image3 {
	position: absolute;
	top: 226px;
	left: 26px;
	opacity: 0.49;
}
.body_content {
	position: relative;
	top: 299px;
	left: 134px;
	color: #FFFFFF;
}
.image4 {
	position: absolute;
	top: 627px;
	right: 0px;
	left: 22px;
	opacity: 1;
	width: 608px;
	height: 410px;
}
.body_content2 {
	position: relative;
	top: 517px;
	left: 30px;
	color: #171717;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
.body_content3 {
}
.body_conten3 {
}
.body_content3 {
	position: absolute;
	top: 612px;
	left: 709px;
	color: #000000;
	font-size: large;
	text-align: justify;
	right: -24px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	margin-left: -13px;
}
#footer2 #contact_about #fblogo_about {
	margin-top: -127px;
	margin-left: 464px;
}
#wrapper #body2_artists #artists_background3 {
	margin-left: 862px;
	margin-top: -328px;
}
#wrapper #body2_artists #artist_name_1 {
	margin-top: -323px;
	margin-left: 910px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#body1_artists #artist_name #artists_events_text {
	margin-left: -173px;
}

#top #second_nav #BECOME_A_MEMBER.thispage {
	border-color: #000000;
	background-color: #000000;
	text-decoration: underline;
}
#top #second_nav #PLAY_FOR_US.thispage {
	border-color: #000000;
	background-color: #000000;
	text-decoration: underline;
}
#top #second_nav #BECOME_A_VOLUNTEER.thispage {
	border-color: #000000;
	background-color: #000000;
	text-decoration: underline;
}
#top #second_nav #BUY_TICKETS.thispage {
	border-color: #000000;
	background-color: #000000;
	text-decoration: underline;
}
#wrapper #become_a_member_body1 {
	color: #FFFFFF;
	float: left;
	margin-top: 40px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#wrapper #buy_tickets_body1 {
	color: #FFFFFF;
	float: left;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#wrapper #volunteer_body1 {
	color: #FFFFFF;
	float: left;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#wrapper #volunteer_body1 {
	color: #FFFFFF;
	float: left;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#wrapper #sign_in_body1 {
	color: #FFFFFF;
	float: left;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
}
#wrapper #welcome_img_become_a_member {
	opacity: 0.74;
}
#wrapper #welcome_img_become_a_volunteer {
	opacity: 0.74;
}
#wrapper #welcome_img_volunteer {
	opacity: 0.74;
}
#wrapper #welcome_img_sign_in {
	opacity: 0.74;
}
#wrapper #become_a_member_body1 form {
	margin-top: 35px;
}
#wrapper #buy_tickets_form  {
	margin-top: 35px;
}
#wrapper #become_a_member_body1 #become_a_member_text {
	margin-left: 166px;
}
#become_a_member_body1 #become_a_member_text h1 {
	margin-left: 204px;
}
#wrapper form {
	color: #FFFFFF;
	margin-top: 66px;
}
#wrapper #become_a_member_body1 #become_a_member_body1_text1 {
	margin-top: 0px;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;

}
#wrapper #buy_tickets_body1 #buy_tickets_body1_text1 {
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size: x-large;
	margin-top: 242px;
	margin-left: -40px;

}
#wrapper #volunteer_body1 #volunteer_body1_text1 {
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size: x-large;
	margin-top: 242px;
	margin-left: -40px;

}
#wrapper #volunteer_body1 #volunteer_body1_text1 {
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-size: x-large;
	margin-top: -587px;

}
/* ... */

